--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,10 +4,10 @@ version = "0.1.0"
 authors = ["Jan-Erik Rediger <janerik@fnordig.de>"]
 
 [dependencies]
-mdbook = { git = "https://github.com/rust-lang-nursery/mdBook", branch = "custom-preprocessor" }
-pulldown-cmark = "0.1.2"
-pulldown-cmark-to-cmark = "1.1.0"
-env_logger = "0.5.10"
-log = "0.4.3"
-clap = "2.32.0"
+mdbook = "0.3.0"
+pulldown-cmark = "0.5"
+pulldown-cmark-to-cmark = "1.2"
+env_logger = "0.6"
+log = "0.4"
+clap = "2.33"
 serde_json = "1.0"
