--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,7 @@ description = "mdbook preprocessor to add mermaid support"
 license = "MPL-2.0"
 homepage = "https://github.com/badboy/mdbook-mermaid"
 repository = "https://github.com/badboy/mdbook-mermaid"
+edition = "2018"
 
 [dependencies]
 mdbook = "0.3"
