(cargo-release) start next development iteration 0.4.3-alpha.0

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "mdbook-mermaid"
-version = "0.4.2"
+version = "0.4.3-alpha.0"
 authors = ["Jan-Erik Rediger <janerik@fnordig.de>"]
 description = "mdbook preprocessor to add mermaid support"
 license = "MPL-2.0"
