--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,4 +19,6 @@ serde_json = "1.0.57"
 toml_edit = "0.2.0"
 
 [dev-dependencies]
-pretty_assertions = "0.6.1"
+assert_cmd = "1.0.3"
+pretty_assertions = "0.7.1"
+tempfile = "3.2.0"
