--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -49,5 +49,8 @@ jobs:
     - name: fmt
       run: cargo fmt --all -- --check
 
+    - name: Clippy
+      run: cargo clippy --all
+
     - name: Docs
       run: cargo doc --no-deps
