--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,13 +9,13 @@ repository = "https://github.com/badboy/mdbook-mermaid"
 edition = "2018"
 
 [dependencies]
-mdbook = "0.4.10"
-pulldown-cmark = "0.9.0"
+mdbook = { version = "0.4.10", default-features = false }
+pulldown-cmark = { version = "0.9.0", default-features = false }
 env_logger = "0.9.0"
 log = "0.4.11"
 clap = "3.1.18"
 serde_json = "1.0.57"
-toml_edit = "0.14.4"
+toml_edit = { version = "0.14.4", default-features = false }
 
 [dev-dependencies]
 assert_cmd = "2.0.0"
