--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,7 +13,7 @@ mdbook = { version = "0.4.21", default-features = false }
 pulldown-cmark = { version = "0.9.0", default-features = false }
 env_logger = "0.10.0"
 log = "0.4.11"
-clap = "4.0.29"
+clap = { version = "4.0.29", features = ["cargo"] }
 serde_json = "1.0.57"
 toml_edit = { version = "0.15.0", default-features = false }
 
