--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -18,6 +18,7 @@ jobs:
       matrix:
         target:
           - x86_64-unknown-linux-gnu
+          - aarch64-unknown-linux-musl
           - x86_64-unknown-linux-musl
           - x86_64-apple-darwin
           - aarch64-apple-darwin
@@ -26,6 +27,9 @@ jobs:
           - target: x86_64-unknown-linux-gnu
             os: ubuntu-20.04
             name: x86_64-unknown-linux-gnu.tar.gz
+          - target: aarch64-unknown-linux-musl
+            os: ubuntu-latest
+            name: aarch64-unknown-linux-musl.tar.gz
           - target: x86_64-unknown-linux-musl
             os: ubuntu-latest
             name: x86_64-unknown-linux-musl.tar.gz
@@ -52,15 +56,15 @@ jobs:
           targets: ${{ matrix.target }}
 
       - name: Setup | musl tools
-        if: matrix.target == 'x86_64-unknown-linux-musl'
+        if: ${{ endsWith(matrix.target, '-musl') }}
         run: sudo apt install -y musl-tools
 
       - name: Build | Build
-        if: matrix.target != 'x86_64-unknown-linux-musl'
+        if: ${{ ! endsWith(matrix.target, '-musl') }}
         run: cargo build --release --target ${{ matrix.target }}
 
       - name: Build | Build (musl)
-        if: matrix.target == 'x86_64-unknown-linux-musl'
+        if: ${{ endsWith(matrix.target, '-musl') }}
         run: cargo build --release --target ${{ matrix.target }}
 
       - name: Post Setup | Extract tag name
