--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,7 +9,7 @@ repository = "https://github.com/badboy/mdbook-mermaid"
 edition = "2018"
 
 [dependencies]
-mdbook = { version = "0.4.36", default-features = false }
+mdbook-preprocessor = "0.5.0"
 pulldown-cmark = { version = "0.10.0", default-features = false }
 env_logger = "0.11.8"
 log = "0.4.11"
