--- a/Cargo.toml
+++ b/Cargo.toml
@@ -30,7 +30,8 @@ assert_cmd = "2.0.0"
 pretty_assertions = "1.4.0"
 tempfile = "3.3.0"
 insta = "1.45"
-mdbook = "0.4"
+mdbook = "0.5"
+regex = "1.0"
 
 [workspace]
 members = [".", "xtask"]
