--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,4 +1,4 @@
-name: Tests
+name: CI
 
 on:
   push:
@@ -7,6 +7,7 @@ on:
 
 env:
   RUSTFLAGS: -Dwarnings
+  CRATE_NAME: mdbook-mermaid-ssr
 
 jobs:
   tests:
