--- a/Cargo.toml
+++ b/Cargo.toml
@@ -34,7 +34,7 @@ mdbook = "0.5"
 regex = "1.0"
 
 [workspace]
-members = [".", "xtask"]
+members = ["."]
 
 [workspace.lints.clippy]
 # Restrictions
