--- a/package.json
+++ b/package.json
@@ -4,11 +4,11 @@
   "private": true,
   "description": "Mermaid.js payload management for mdbook-mermaid-ssr",
   "scripts": {
-    "sync-payload": "cp node_modules/mermaid/dist/mermaid.min.js payload/mermaid.min.js",
-    "postinstall": "npm run sync-payload"
+    "sync": "cp node_modules/mermaid/dist/mermaid.min.js payload/mermaid.min.js",
+    "postinstall": "npm run sync"
   },
   "dependencies": {
-    "mermaid": "^11.4.1"
+    "mermaid": "11.4.1"
   },
   "devDependencies": {}
 }
