--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -17,10 +17,7 @@ jobs:
     steps:
     - uses: actions/checkout@8e8c483db84b4bee98b60c0593521ed34d9990e8 # v6.0.1
     - uses: dtolnay/rust-toolchain@stable
-    - name: Install mdbook
-      run: |
-        cargo install cargo-binstall
-        cargo binstall -y mdbook
+    - uses: taiki-e/install-action@mdbook
     - uses: Swatinem/rust-cache@779680da715d629ac1d338a641029a2f4372abb5 # v2.8.2
 
     - name: Install Chromium
